# chat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  litellm_config.yaml  settings.py
frontend/: OneDayChat.tsx  index.html  package.json
src/: __init__.py  main.py
src/agents/: __init__.py  orchestrator.py
src/components/: __init__.py  library.py
src/deployments/: __init__.py  configs.py
src/services/: __init__.py  deployment_service.py  github_service.py
src/templates/: __init__.py  project_templates.py
tests/: __init__.py  conftest.py  test_api.py  test_components.py  test_deployment.py  test_e2e.py  test_e2e_ui.py  test_github_service.py  test_orchestrator.py
